# games-api

./: README.md  contributors.txt  db.sqlite3  manage.py  pyproject.toml  requirements.txt  schema.yml  setup.cfg
games/: admin.py  models.py  serializers.py  urls.py  views.py
games/migrations/: 0001_initial.py
games/tests/: test_evaluations.py  test_games.py
games_api/: settings.py  urls.py  wsgi.py
tests/: test_evaluations.py  test_games.py
